build: add test dependencies